removi imagem do circulo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste Joao</title>
-    <link rel="stylesheet" type="text/css" href="personalizarTela.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -39,12 +39,11 @@
                     Confira agora a nossa nova linha de uniformes que <br> estaremos usando na jornada do Worlds 2021.
                 </h4>
 
-                <button class="botao "> Garanta Já</button>
+                <button class="botao"> Garanta Já</button>
             </div>
 
 
-            <img class="blusas-roupas " src="blusas.png " alt="imagem blusas ">
-            <img class="imagem-circulo " src="circulo.png " alt="imagem do circulo ">
+            <img class="blusas-roupas " src="blusas.png " alt="imagem blusas ">            
             <img class="celular " src="celular.png " alt="imagem celular ">
 
 
