--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <header class="cabecalho">
-        <img class="cabecalho-logo" src=" logo.svg " alt="logo Canids ">
+        <img class="cabecalho-logo" src="./img/logo.svg" alt="logo Canids ">
 
         <nav class="cabecalho-menu ">
             <a class="cabecalho-menu-item ">Loja</a>
@@ -20,10 +20,10 @@
             <a class="cabecalho-menu-item ">Notícias </a>
             <a class="cabecalho-menu-item ">Times</a>
             <a class="cabecalho-menu-item ">Parceiros</a>
-            <a class="cabecalho-menu-item ">Contatos</a>
+            <a href = "https://www.google.com" class ="cabecalho-menu-item ">Contatos</a>
 
         </nav>
-        <button class="cabecalho-botaoitem ">Criar Conta</button>
+        <button class="cabecalho-botao-item ">Criar Conta</button>
     </header>
 
     <main class="conteudo ">
@@ -43,8 +43,8 @@
             </div>
 
 
-            <img class="blusas-roupas " src="blusas.png " alt="imagem blusas ">            
-            <img class="celular " src="celular.png " alt="imagem celular ">
+            <img class="blusas-roupas" src="./img/blusas.png" alt="imagem blusas ">            
+            <img class="celular" src="./img/celular.png" alt="imagem celular ">
 
 
         </section>
@@ -65,7 +65,7 @@
         <p class="rodape-paragrafo "> <a href="https://www.twitch.tv/titanlol1">https://www.twitch.tv/titanlol1</a></p>
         <p class="rodape-paragrafo "><a href="https://www.twitch.tv/jojolol11">https://www.twitch.tv/jojolol11</a></p>
         <p class="rodape-paragrafo "><a href="https://www.twitch.tv/redfekz">https://www.twitch.tv/redfekz</a></p>
-        <img class="logo-do-rodape " src="logo.svg " alt="logo no footer ">
+        <img class="logo-do-rodape " src="./img/logo.svg" alt="logo no footer ">
 
 
 
